--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 das ist ein read me
 
 hier wurde was geändert 17.05.24
+
+trotz das die test bei ci pipelines fehlgeschlagen ist, wird es trotzdem gepusht
